# fayd

./: Cargo.toml  README.md
.github/workflows/: build.yml  integration.yml
fayd/: Cargo.toml
fayd-rpc/: Cargo.toml
fayd-rpc/src/: handlers.rs  main.rs  requests.rs
fayd/src/: args.rs  faucet.rs  lib.rs
integration/: sanity_check.sh  setup.sh
