[package]
name = "fayd-rpc"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5"
anyhow = "1"
paperclip = { version = "0.8", features = ["actix4"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive", "env"] }

fayd = { path = "../fayd" }
